# ISA

./: CMakeLists.txt  Makefile  README.md  dbAccess.cpp  dbAccess.h  isaclient  isaserver  main.cpp  manual.odt  methods.cpp  methods.h  parseArgs.cpp  server  socketHelper.cpp  socketHelper.h
client/: Makefile  isaclient  main.cpp
client/board-sender/: boardSender.cpp  boardSender.h
client/enums/: enums.h
client/item-sender/: itemSender.cpp  itemSender.h
client/parser/: parser.cpp  parser.h
server/: Makefile  dbAccess.h  enums.h  isaserver  main.cpp  methods.cpp  parseArgs.cpp  server  socketHelper.cpp  socketHelper.h
server/argument-parser/: parseArgs.cpp  parseArgs.h
server/errors/: errors.cpp  errors.h
server/handlers/base-handler/: base.cpp  base.h
server/handlers/delete/: deleteHandler.cpp  deleteHandler.h
server/handlers/get/: getHandler.cpp  getHandler.h
server/handlers/post/: postHandler.cpp  postHandler.h
server/handlers/put/: putHandler.cpp  putHandler.h
server/socket-helper/: socketHelper.cpp  socketHelper.h
server/structures/: structures.cpp  structures.h
